# openmesh-cli

./: .gitignore  Cargo.toml  OPEN-SOURCE-FIXES.md  OPENMESH-SKILLS.md  README.md
scripts/: bootstrap-xnode.sh
src/: lib.rs  main.rs
src/cli/: context.rs  error.rs  flake_editor.rs  mod.rs  output.rs  wait.rs
src/cli/cmd/: app.rs  mod.rs  os.rs  req.rs  status.rs
src/sdk/: mod.rs
src/sdk/auth/: handlers.rs
src/sdk/config/: handlers.rs  models.rs
src/sdk/file/: handlers.rs  models.rs
src/sdk/info/: handlers.rs  mod.rs  models.rs
src/sdk/os/: handlers.rs  models.rs
src/sdk/process/: handlers.rs  models.rs
src/sdk/request/: handlers.rs  models.rs
src/sdk/usage/: handlers.rs  models.rs
src/sdk/utils/: error.rs  mod.rs  output.rs  session.rs
tests/: test_checksum.rs  test_flake_editor.rs  test_suite.rs
